Sample patch API
